--- a/src/app/modules/home/components/todo-list/todo-list.component.html
+++ b/src/app/modules/home/components/todo-list/todo-list.component.html
@@ -1,1 +1,23 @@
-<p>todo-list works!</p>
+<section>
+    <ul>
+        <li>
+            <input type="checkbox">
+            <input type="text">
+
+            <button>
+                <img src="assets/icons/icon-tash.svg" alt="">
+            </button>
+        </li>
+        <li>
+            <input type="checkbox">
+            <input type="text" class="checked">
+
+            <button>
+                <img src="assets/icons/icon-tash.svg" alt="">
+            </button>
+        </li>
+    </ul>
+</section>
+
+<app-todo-input-add-itens></app-todo-input-add-itens>
+<app-todo-button-delet-all></app-todo-button-delet-all>
