--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
-<app-todo-list></app-todo-list>
-<app-todo-input-add-itens></app-todo-input-add-itens>
-<app-todo-button-delet-all></app-todo-button-delet-all>
+<section class="container">
+    <app-header></app-header>
+    <app-todo-list></app-todo-list>
+</section>
+
+
