--- a/src/app/modules/home/components/todo-list/todo-list.component.html
+++ b/src/app/modules/home/components/todo-list/todo-list.component.html
@@ -1,23 +1,17 @@
-<section>
-    <ul>
-        <li>
-            <input type="checkbox">
-            <input type="text">
+<section [ngClass]="{loading: !taskList.length}">
 
-            <button>
-                <img src="assets/icons/icon-tash.svg" alt="">
-            </button>
-        </li>
-        <li>
-            <input type="checkbox">
-            <input type="text" class="checked">
+    <ul *ngIf="taskList.length">
+        <li *ngFor="let item of taskList; let i = index">
+            <input type="checkbox" [(ngModel)]="item.checked">
+            <input type="text"  [(ngModel)]="item.task">
 
             <button>
                 <img src="assets/icons/icon-tash.svg" alt="">
             </button>
         </li>
     </ul>
+
 </section>
 
 <app-todo-input-add-itens></app-todo-input-add-itens>
-<app-todo-button-delet-all></app-todo-button-delet-all>
+<app-todo-button-delet-all *ngIf="taskList.length"></app-todo-button-delet-all>
