--- a/src/app/modules/home/components/todo-list/todo-list.component.html
+++ b/src/app/modules/home/components/todo-list/todo-list.component.html
@@ -13,5 +13,5 @@
 
 </section>
 
-<app-todo-input-add-itens></app-todo-input-add-itens>
+<app-todo-input-add-itens (emitItemTaskList)="setEmitTaskList($event)"></app-todo-input-add-itens>
 <app-todo-button-delet-all *ngIf="taskList.length" (click)="deleteAllTaskList()"></app-todo-button-delet-all>
